assets/stylesheets/application.scss
/* ... */
footer { padding: 20px 0 60px; }
h1, h2, h3, h4, h5, h6 { color: white; }
h1 { margin-top: 0; }
h2 { text-align: center; }
h2 + * { margin-top: 30px; }
h4 { margin: 0; }
a { color: #d13dc5; }
a:hover { color: #6c2eb2; }

//Container settings
#container { margin-right: auto; margin-left: auto; padding-left: 10px; padding-right: 10px; padding-top: 10px;}
#container:before, #container:after { content: " "; display: table; }
#container:after { clear: both; }
@media (min-width: 768px) { #container { width: 740px; } }
@media (min-width: 992px) { #container { width: 960px; } }
@media (min-width: 1200px) { #container { width: 970px; } }

//Row
.row { height: 100%; }
@media (max-width: 768px) { #container { width: 100%; } }
.title-row { height: none; }
.row:before, .row:after { display: table; }
.row:after { clear: both; }

//Introductory text
.intro p { color: white; font-family: "Muli", sans-serif; font-size: 16px; }
.intro h1 { text-align: left; font-size: 40px; padding-top: 10px; }
@media (max-width: 767px) { .description { height: auto; }
  .intro { padding-top: 20px; }
  .intro h1 { text-align: center;  }
}

//Questions text
.questions p { color: white; font-family: "Muli", sans-serif; }

//Dashboard links
.dashboard { box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
.dashboard:hover { box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3); cursor: pointer;}
.dashboard { margin-bottom: 21px; background-color: #fff; border: 1px solid transparent; border-radius: 4px; -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); }
.dashboard-button {
  padding: 10px 15px;
  border-bottom: 1px solid transparent;
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}
.dashboard-title { margin-top: 0; margin-bottom: 0; font-size: 20px; color: black; }
.dashboard-title { text-transform: uppercase; letter-spacing: 1px; text-align: center; }
.dashboard-subtitle { margin-top: 0; margin-bottom: 0; font-size: 14px; color: black; }
.dashboard-subtitle { text-transform: uppercase; letter-spacing: 1px; text-align: center; }
.dashboard-link:hover { text-decoration: none; }

.help { height: 100px; background-color: white; color: black; }
.help-title h3 {
  text-align: center;
}
#trello {
  .help {
    height: 160px;
  }
  .help-title {
    height: 160px;
  }
}

.help-title { height: 100px; background-color: orange; }
.help-icon:before {
	content: "\f059  ";
	font-family: FontAwesome;
}

.github-issues h1:before {
  content: "\f09b  ";
	font-family: FontAwesome;
}

.github-prs h1:before {
  content: "\f09b  ";
	font-family: FontAwesome;
}

.github-forks h1:before {
  content: "\f09b  ";
	font-family: FontAwesome;
}

.home-icon:before {
	content: "\f015  ";
	font-family: FontAwesome;
}

.help-icon {
  float: right;
  color: black;
  cursor: pointer;
  margin-right: 5px;
  margin-top: 2px;
}

.home-icon {
  float: right;
  color: black;
  cursor: pointer;
  margin-right: 5px;
  margin-top: 2px;
}

.help-icon:hover {
  color: black;
  text-decoration: none;
}

.category:before {
	content: "\f02e  ";
	font-family: FontAwesome;
}

.info {
  color: #6c2eb2;
}

.info:before {
	content: "\f129   ";
	font-family: FontAwesome;
}

.goal:before {
	content: "\f140  ";
	font-family: FontAwesome;
}

.goal {
  color: #6c2eb2;
}

.code > a:before {
	content: "\f09b  ";
	font-family: FontAwesome;
}

.code {  a {
    color: #6c2eb2;
  }
  a:hover {
    color: #d13dc5;
  }
}

.first-help-row {
  margin-top:1200px;
}

.help-row {
  margin-left: -10px;
  margin-right: -10px;
  height: 120px;
  h3 {
    color: black;
  }
  a {
    color: #6c2eb2;
  }
  a:hover {
    color: #d13dc5;
  }
}

.category {
  color: #6c2eb2;
  font-size: 12px;
}

.full-width{
  width: 100%;
}

.black {
  background-color: black;
}

.padding-top {
  padding-top: 10px;
}

.padding-top-3 {
  padding-top: 30px;
}

.what {
  height:auto;
}

@media (min-width: 768px) {
  .quote-container {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
  }

  .metadata-container {
    position: relative;
    top: 50%;
  }
}

@media (max-width: 767px) {
  .widget-quotes {
    height: 100%;
  }
  .help-title {
    height: 50px;
    margin-bottom: 0;
  }
  .help {
    height: auto;
    margin-bottom: 0;
    padding-bottom: 10px;
  }
  .help-row {
    height: auto;
  }
}

.color-1 {
  background-color: #48D1CC;
}

.color-2 {
  background-color: #C783E9;
}

.grey {
  background-color: #4C4C4C;
}

.color-3 {
  background-color: #326df4;
}

.hidden {
  display: none;
}

